// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keeps multi-message content separated and records stable names, pseudonyms and synthetic test identity > legacy turn without diagnostics and multiple messages 1`] = `
{
  "classId": "3fc09f1091c8a5595674d82086b05926",
  "id": "2c5a45fd597efd280b38e7c52a342daf",
  "release": "release",
  "sessionId": "5d0fd6cc576d8fdb14b3bb3093ca4cc1",
  "spans": [
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "40da57315644babe",
      "input": "one
two",
      "metadata": {
        "capturedEvents": 4,
        "clockSkew": false,
        "modelDiagnostics": false,
        "terminalEvent": "assistant-message",
      },
      "name": "Tutoring turn",
      "output": "three
four",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "agent",
    },
  ],
  "userId": "1433a403e662bc66d46dc3ea855817f1",
  "version": 1,
}
`;

exports[`links model attempts, tools, approvals and questions under a stable turn with truthful usage > linked turn with attempts, failure and all content 1`] = `
{
  "classId": "3fc09f1091c8a5595674d82086b05926",
  "id": "8894ae042eebb2fcea1a3404a3365b96",
  "release": "release",
  "sessionId": "5d0fd6cc576d8fdb14b3bb3093ca4cc1",
  "spans": [
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": true,
      "id": "718c587b28708ecb",
      "input": "Student input",
      "metadata": {
        "capturedEvents": 10,
        "clockSkew": false,
        "modelDiagnostics": true,
        "terminalEvent": "turn-failed",
      },
      "name": "Tutoring turn",
      "output": "Assistant answer",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "agent",
    },
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": true,
      "id": "b559208675c8b3ea",
      "input": "model input",
      "metadata": {
        "clockSkew": false,
        "complete": true,
        "correlation": "ordered-session-events",
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:one",
        "timingComplete": true,
        "truncated": true,
      },
      "model": "model-test",
      "name": "Model generation",
      "output": "model output",
      "parentId": "718c587b28708ecb",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "span",
    },
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": false,
      "id": "f6ba8394da4fbcb3",
      "input": "model input",
      "metadata": {
        "attempt": 1,
        "clockSkew": false,
        "complete": true,
        "correlation": "ordered-session-events",
        "costUnit": "test-units",
        "costUnits": 10,
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:one",
        "state": "settled",
        "timingComplete": true,
        "truncated": true,
      },
      "model": "model-test",
      "name": "Model attempt 1",
      "output": "",
      "parentId": "b559208675c8b3ea",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "generation",
      "usage": {
        "input": 3,
        "output": 7,
      },
    },
    {
      "endedAt": undefined,
      "failed": true,
      "id": "f91ae6352e37a998",
      "input": "model input",
      "metadata": {
        "attempt": 2,
        "clockSkew": false,
        "complete": true,
        "correlation": "ordered-session-events",
        "costUnit": "test-units",
        "costUnits": "unknown",
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:one",
        "state": "unknown",
        "timingComplete": false,
        "truncated": true,
      },
      "model": "model-test",
      "name": "Model attempt 2",
      "output": "model output",
      "parentId": "b559208675c8b3ea",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "generation",
    },
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": true,
      "id": "2d42edf663cbff9b",
      "input": "tool input",
      "metadata": {
        "clockSkew": false,
        "eventType": "tool-started",
        "timingComplete": true,
        "truncated": true,
      },
      "name": "write",
      "output": "tool failure",
      "parentId": "718c587b28708ecb",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "tool",
    },
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": false,
      "id": "2d373e692b7134db",
      "input": "{"eventId":"event:6","sequence":6,"occurredAt":"2026-10-08T00:00:00.000Z","eventType":"approval-requested","approvalId":"approval:one","messageId":"message:one","tool":"write","summary":"approval","truncated":false}",
      "metadata": {
        "clockSkew": false,
        "eventType": "approval-requested",
        "timingComplete": true,
        "truncated": false,
      },
      "name": "Approval",
      "output": "{"eventId":"event:7","sequence":7,"occurredAt":"2026-10-08T00:00:01.000Z","eventType":"approval-resolved","approvalId":"approval:one","decision":"rejected"}",
      "parentId": "718c587b28708ecb",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "span",
    },
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "8c43020b3b769a46",
      "input": "",
      "metadata": {
        "clockSkew": false,
        "eventType": "questions-resolved",
        "timingComplete": true,
        "truncated": false,
      },
      "name": "questions-resolved",
      "output": "{"eventId":"event:8","sequence":8,"occurredAt":"2026-10-08T00:00:00.000Z","eventType":"questions-resolved","messageId":"message:one","interruptId":"q","questions":[{"text":"Which?","choices":["A"],"required":true}],"answers":["A"],"cancelled":false}",
      "parentId": "718c587b28708ecb",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "event",
    },
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": true,
      "id": "95c27296f65567d1",
      "input": "",
      "metadata": {
        "clockSkew": false,
        "eventType": "turn-failed",
        "timingComplete": true,
        "truncated": false,
      },
      "name": "turn-failed",
      "output": "{"eventId":"event:10","sequence":10,"occurredAt":"2026-10-08T00:00:01.000Z","eventType":"turn-failed","messageId":"message:one","category":"provider","retryable":true}",
      "parentId": "718c587b28708ecb",
      "startedAt": "2026-10-08T00:00:01.000Z",
      "type": "event",
    },
  ],
  "userId": "1433a403e662bc66d46dc3ea855817f1",
  "version": 1,
}
`;

exports[`marks incomplete old diagnostics without inventing output, usage, or negative durations > incomplete legacy observations 1`] = `
{
  "classId": "3fc09f1091c8a5595674d82086b05926",
  "id": "2b8494edd5397d56cbc8bd1540fa706f",
  "release": "release",
  "sessionId": "5d0fd6cc576d8fdb14b3bb3093ca4cc1",
  "spans": [
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": false,
      "id": "9a790f2760aa984f",
      "input": "legacy",
      "metadata": {
        "capturedEvents": 5,
        "clockSkew": true,
        "modelDiagnostics": true,
        "terminalEvent": "assistant-message",
      },
      "name": "Tutoring turn",
      "output": "legacy answer",
      "startedAt": "2026-10-08T00:00:01.000Z",
      "type": "agent",
    },
    {
      "failed": false,
      "id": "57efe1c7905ac3f9",
      "input": "request",
      "metadata": {
        "clockSkew": false,
        "complete": false,
        "correlation": "ordered-session-events",
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:one",
        "timingComplete": false,
        "truncated": false,
      },
      "model": "model-test",
      "name": "Model generation",
      "output": "",
      "parentId": "9a790f2760aa984f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "generation",
    },
    {
      "failed": false,
      "id": "ee7e31c94f1133d6",
      "input": "{}",
      "metadata": {
        "clockSkew": false,
        "eventType": "tool-started",
        "timingComplete": false,
        "truncated": false,
      },
      "name": "read",
      "output": "",
      "parentId": "9a790f2760aa984f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "tool",
    },
    {
      "failed": false,
      "id": "59165ad15dc5a3b2",
      "input": "{"eventId":"event:4","sequence":4,"occurredAt":"2026-10-08T00:00:00.000Z","eventType":"approval-requested","approvalId":"a","tool":"read","summary":"missing resolution"}",
      "metadata": {
        "clockSkew": false,
        "eventType": "approval-requested",
        "timingComplete": false,
        "truncated": false,
      },
      "name": "Approval",
      "output": "",
      "parentId": "9a790f2760aa984f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "span",
    },
  ],
  "userId": "1433a403e662bc66d46dc3ea855817f1",
  "version": 1,
}
`;

exports[`matches distinct calls by kind and ID and keeps unrelated evaluation usage out of tutoring attempts > independent model calls, three retries, tools and approvals 1`] = `
{
  "classId": "8344999dd4d843ff26e7553fc52c3e49",
  "id": "56b5800c8b93cc5b87ed350912bd5683",
  "release": "r",
  "sessionId": "6d03f979abd075bf414a0919f393dd10",
  "spans": [
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "c54cc7462d538b0f",
      "input": "input",
      "metadata": {
        "capturedEvents": 16,
        "clockSkew": false,
        "modelDiagnostics": true,
        "terminalEvent": "turn-ended",
      },
      "name": "Tutoring turn",
      "output": "",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "agent",
    },
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "4c774c6831195048",
      "input": "one",
      "metadata": {
        "clockSkew": false,
        "complete": true,
        "correlation": "ordered-session-events",
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:one",
        "timingComplete": true,
        "truncated": true,
      },
      "model": "model-test",
      "name": "Model generation",
      "output": "first reply",
      "parentId": "c54cc7462d538b0f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "span",
    },
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": false,
      "id": "dbd56110320f6f1e",
      "input": "one",
      "metadata": {
        "attempt": 1,
        "clockSkew": false,
        "complete": true,
        "correlation": "ordered-session-events",
        "costUnit": "test-units",
        "costUnits": 10,
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:one",
        "state": "settled",
        "timingComplete": true,
        "truncated": true,
      },
      "model": "model-test",
      "name": "Model attempt 1",
      "output": "",
      "parentId": "4c774c6831195048",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "generation",
      "usage": {
        "input": 3,
        "output": 7,
      },
    },
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": false,
      "id": "7f51f29e64bffce4",
      "input": "one",
      "metadata": {
        "attempt": 2,
        "clockSkew": false,
        "complete": true,
        "correlation": "ordered-session-events",
        "costUnit": "test-units",
        "costUnits": 10,
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:one",
        "state": "settled",
        "timingComplete": true,
        "truncated": true,
      },
      "model": "model-test",
      "name": "Model attempt 2",
      "output": "",
      "parentId": "4c774c6831195048",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "generation",
      "usage": {
        "input": 3,
        "output": 7,
      },
    },
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": false,
      "id": "edc7fd6d605c2018",
      "input": "one",
      "metadata": {
        "attempt": 3,
        "clockSkew": false,
        "complete": true,
        "correlation": "ordered-session-events",
        "costUnit": "test-units",
        "costUnits": 10,
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:one",
        "state": "settled",
        "timingComplete": true,
        "truncated": true,
      },
      "model": "model-test",
      "name": "Model attempt 3",
      "output": "first reply",
      "parentId": "4c774c6831195048",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "generation",
      "usage": {
        "input": 3,
        "output": 7,
      },
    },
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "af51468696b0430e",
      "input": "two",
      "metadata": {
        "clockSkew": false,
        "complete": true,
        "correlation": "ordered-session-events",
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:two",
        "timingComplete": true,
        "truncated": true,
      },
      "model": "model-test",
      "name": "Model generation",
      "output": "second reply",
      "parentId": "c54cc7462d538b0f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "span",
    },
    {
      "endedAt": "2026-10-08T00:00:01.000Z",
      "failed": false,
      "id": "db420857b1031591",
      "input": "two",
      "metadata": {
        "attempt": 1,
        "clockSkew": false,
        "complete": true,
        "correlation": "ordered-session-events",
        "costUnit": "test-units",
        "costUnits": 10,
        "eventType": "model-diagnostic",
        "provider": "provider-test",
        "requestId": "request:two",
        "state": "settled",
        "timingComplete": true,
        "truncated": true,
      },
      "model": "model-test",
      "name": "Model attempt 1",
      "output": "second reply",
      "parentId": "af51468696b0430e",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "generation",
    },
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "af5aec54cec0e5ff",
      "input": "first",
      "metadata": {
        "clockSkew": false,
        "eventType": "tool-started",
        "timingComplete": true,
        "truncated": true,
      },
      "name": "read",
      "output": "first result",
      "parentId": "c54cc7462d538b0f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "tool",
    },
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "6f9af7892c365be5",
      "input": "second",
      "metadata": {
        "clockSkew": false,
        "eventType": "tool-started",
        "timingComplete": true,
        "truncated": false,
      },
      "name": "read",
      "output": "second result",
      "parentId": "c54cc7462d538b0f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "tool",
    },
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "a3d6ea084d5714e4",
      "input": "{"eventId":"event:10","sequence":10,"occurredAt":"2026-10-08T00:00:00.000Z","eventType":"approval-requested","approvalId":"first","tool":"read","summary":"first"}",
      "metadata": {
        "clockSkew": false,
        "eventType": "approval-requested",
        "timingComplete": true,
        "truncated": false,
      },
      "name": "Approval",
      "output": "{"eventId":"event:13","sequence":13,"occurredAt":"2026-10-08T00:00:00.000Z","eventType":"approval-resolved","approvalId":"first","decision":"rejected"}",
      "parentId": "c54cc7462d538b0f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "span",
    },
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "a4c4436899abfec5",
      "input": "{"eventId":"event:11","sequence":11,"occurredAt":"2026-10-08T00:00:00.000Z","eventType":"approval-requested","approvalId":"second","tool":"read","summary":"second"}",
      "metadata": {
        "clockSkew": false,
        "eventType": "approval-requested",
        "timingComplete": true,
        "truncated": false,
      },
      "name": "Approval",
      "output": "{"eventId":"event:12","sequence":12,"occurredAt":"2026-10-08T00:00:00.000Z","eventType":"approval-resolved","approvalId":"second","decision":"approved"}",
      "parentId": "c54cc7462d538b0f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "span",
    },
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "1bd6f72f4bf49769",
      "input": "",
      "metadata": {
        "clockSkew": false,
        "eventType": "project-change",
        "timingComplete": true,
        "truncated": false,
      },
      "name": "project-change",
      "output": "{"eventId":"event:14","sequence":14,"occurredAt":"2026-10-08T00:00:00.000Z","eventType":"project-change","actor":"student","patch":"+print()","summary":"edit","truncated":false}",
      "parentId": "c54cc7462d538b0f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "event",
    },
    {
      "endedAt": "2026-10-08T00:00:00.000Z",
      "failed": false,
      "id": "da175c64b2cfb922",
      "input": "",
      "metadata": {
        "clockSkew": false,
        "eventType": "workspace-edit",
        "timingComplete": true,
        "truncated": false,
      },
      "name": "workspace-edit",
      "output": "{"eventId":"event:15","sequence":15,"occurredAt":"2026-10-08T00:00:00.000Z","eventType":"workspace-edit","approvalId":"first","operation":"created","path":"x.py","digest":"sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"}",
      "parentId": "c54cc7462d538b0f",
      "startedAt": "2026-10-08T00:00:00.000Z",
      "type": "event",
    },
  ],
  "userId": "c768fc06cffe727023eb1c9ab7e2d922",
  "version": 1,
}
`;
